[project]
name = "sonic-boom"
version = "0.1.0"
description = "A simple CLI tool to scan for speaker broadcasters and check their sync status."
dependencies = [
    "zeroconf>=0.132.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyaudio>=0.2.14",
]

[project.scripts]
sonic-boom = "sonic_boom.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
